--- a/Framework/Framework.vcxproj
+++ b/Framework/Framework.vcxproj
@@ -154,12 +154,15 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="Framework.cpp" />
+    <ClCompile Include="Geomatries\AnimationRect.cpp" />
     <ClCompile Include="Geomatries\Rect.cpp" />
     <ClCompile Include="Geomatries\ShadedTexture.cpp" />
     <ClCompile Include="Geomatries\TextureRect.cpp" />
     <ClCompile Include="Renders\IA\IndexBuffer.cpp" />
     <ClCompile Include="Renders\IA\InputLayout.cpp" />
     <ClCompile Include="Renders\IA\VertexBuffer.cpp" />
+    <ClCompile Include="Renders\States.cpp" />
+    <ClCompile Include="Renders\Resources\Texture2D.cpp" />
     <ClCompile Include="Renders\Resources\VertexType.cpp" />
     <ClCompile Include="Renders\Shaders\IShader.cpp" />
     <ClCompile Include="Renders\Shaders\PixelShader.cpp" />
@@ -169,13 +172,17 @@
     <ClCompile Include="Systems\Mouse.cpp" />
     <ClCompile Include="Systems\Time.cpp" />
     <ClCompile Include="Systems\Window.cpp" />
+    <ClCompile Include="Utilities\Animator.cpp" />
     <ClCompile Include="Utilities\BoundingBox.cpp" />
     <ClCompile Include="Utilities\DirectHelper.cpp" />
     <ClCompile Include="Utilities\Gui.cpp" />
+    <ClCompile Include="Utilities\Path.cpp" />
     <ClCompile Include="Utilities\Random.cpp" />
+    <ClCompile Include="Utilities\String.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Framework.h" />
+    <ClInclude Include="Geomatries\AnimationRect.h" />
     <ClInclude Include="Geomatries\Rect.h" />
     <ClInclude Include="Geomatries\ShadedTexture.h" />
     <ClInclude Include="Geomatries\TextureRect.h" />
@@ -185,6 +192,8 @@
     <ClInclude Include="Renders\IA\VertexBuffer.h" />
     <ClInclude Include="Renders\Resources\GlobalBuffer.h" />
     <ClInclude Include="Renders\Resources\ShaderBuffer.h" />
+    <ClInclude Include="Renders\States.h" />
+    <ClInclude Include="Renders\Resources\Texture2D.h" />
     <ClInclude Include="Renders\Resources\VertexType.h" />
     <ClInclude Include="Renders\Shaders\IShader.h" />
     <ClInclude Include="Renders\Shaders\PixelShader.h" />
@@ -194,11 +203,14 @@
     <ClInclude Include="Systems\Mouse.h" />
     <ClInclude Include="Systems\Time.h" />
     <ClInclude Include="Systems\Window.h" />
+    <ClInclude Include="Utilities\Animator.h" />
     <ClInclude Include="Utilities\BoundingBox.h" />
     <ClInclude Include="Utilities\DirectHelper.h" />
     <ClInclude Include="Utilities\Gui.h" />
+    <ClInclude Include="Utilities\Path.h" />
     <ClInclude Include="Utilities\Random.h" />
     <ClInclude Include="Utilities\SingletonBase.h" />
+    <ClInclude Include="Utilities\String.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
