클래스 추가,수정 AVS 폴더 내 Player 클래스 추가 Avoid N Survival 적 위치 이상하게 움직이던 버그 픽스 적 위치 이동후 투명도 조절 기능추가

--- a/Framework/Framework.vcxproj
+++ b/Framework/Framework.vcxproj
@@ -153,6 +153,7 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="ANS\Player.cpp" />
     <ClCompile Include="Framework.cpp" />
     <ClCompile Include="Geomatries\AnimationRect.cpp" />
     <ClCompile Include="Geomatries\Rect.cpp" />
@@ -181,6 +182,7 @@
     <ClCompile Include="Utilities\String.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="ANS\Player.h" />
     <ClInclude Include="Framework.h" />
     <ClInclude Include="Geomatries\AnimationRect.h" />
     <ClInclude Include="Geomatries\Rect.h" />
